# bento-open-source-email-client

./: README.md  bun.lockb  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: _direct_api.rs  gmail-oauth-imap.rs
src/lib/: logger.ts  supabase.ts
src/lib/gmail/: fetch.ts
src/router/: index.ts
src/stores/: user.ts
src/views/auth/: Index.vue
src/views/auth/components/: UserAuthForm.vue
src/views/inbox/: Index.vue
src/views/inbox/components/: AccountSwitcher.vue  Mail.vue  MailDisplay.vue  MailList.vue  Nav.vue
src/views/onboarding/: Index.vue
