[package]
name = "bento-open-source-email-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
RUST_BACKTRACE=1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gmail = "0.15.8"
tokio = "1.39.2"
google-oauth = { version = "1.11.0", features = ["blocking"] }
yup-oauth2 = "11.0.0"
google-gmail1 = "5.0.5"
imap = "2.4.1"
base64 = "0.22.1"
native-tls = "0.2.12"
dotenv = "0.15.0"
reqwest = "0.12.5"
google_auth_verifier = "0.1.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
